src/objects/App_Launch_Store__c.object
<CustomObject>
    <description>Custom object for Tanya</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>App Launch Stores</relationshipLabel>
        <relationshipName>App_Launch_Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publicly Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <label>Store Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_URL__c</fullName>
        <label>Store URL</label>
        <type>Url</type>
    </fields>
    <label>App Launch Store</label>
    <nameField>
        <displayFormat>ALS-{00000000}</displayFormat>
        <label>App Launch Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Launch Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>